# opencontextprotocol

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  MIGRATION.md  PUBLISHING.md  README.md  SECURITY.md  SPEC.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: conformance-external.sh  conformance-green.sh  conformance-red.sh  host-conformance.sh
.github/workflows/: ci.yml
contextgraph-conformance/: Cargo.toml  README.md
contextgraph-conformance/fixtures/contextgraph-1.0-draft/: context-frame.compact.valid.json  context-frame.missing-citation.invalid.json  context-frame.reference.valid.json  context-frame.valid.json  context-query.valid.json  manifest.json  normalization-vectors.json  strict-validation.invalid.json
contextgraph-conformance/src/: host_conformance.rs  lib.rs  report.rs
contextgraph-conformance/tests/: conformance_suite.rs  examples_roundtrip.rs  golden_fixtures.rs  host_conformance_suite.rs  ingest_conformance.rs  stdio_roundtrip.rs  usage_report.rs  verify_wire.rs
contextgraph-host/: Cargo.toml  README.md
contextgraph-host/src/: compose.rs  consent.rs  error.rs  host.rs  http.rs  ingest.rs  lib.rs  provider.rs  stdio.rs  verify.rs  wire.rs
contextgraph-host/src/ingest/: tests.rs
contextgraph-host/tests/: prompt_ingest.rs
contextgraph-trace/: Cargo.toml
contextgraph-trace/fixtures/: golden-resume.ndjson  golden.ndjson  trip-assembly-budget-honesty.ndjson  trip-citation-at-use.ndjson  trip-deterministic-composition.ndjson  trip-effect-exactly-once.ndjson  trip-resume-integrity.ndjson  trip-sequence-integrity.ndjson  trip-staleness-at-use.ndjson  trip-turn-loop-pairing.ndjson
contextgraph-trace/src/: event.rs  journal.rs  lib.rs  oracle.rs  report.rs
contextgraph-trace/tests/: fixture_suite.rs
contextgraph-types/: Cargo.toml  README.md
contextgraph-types/src/: capability.rs  consent.rs  frame.rs  identity.rs  lib.rs  query.rs  scope.rs  usage.rs  validate.rs  verify.rs
contextgraph-types/tests/: frame_representation_witness.rs
docs/: adaptive-context-reconciliation.md  context-reuse.md  implementing-a-provider.md  index.md  overview.md  protocol-advantages.md  protocol-surface.md  running-conformance.md  stability.md
docs/adr/: 0002-request-correlation-and-the-json-rpc-question.md  0005-frame-representations.md  0006-prompt-ingestion-as-a-local-provider.md  0007-protocol-product-boundary.md
docs/future/context-receipt-impact-trace/: context-receipt-impact-trace-plan.md
docs/profiles/: context-exchange-provider.md
docs/sketches/: host-trace.md  resolve.md
docs/superpowers/specs/: 2026-07-21-context-receipt-impact-trace-design.md
examples/: README.md  full-stdio-session.ndjson  reference-messages.json
schema/: contextgraph-envelope.schema.json  ocp-envelope.schema.json  validate-examples.py
sdk/: README.md
sdk/go/: .gitignore  README.md  go.mod
sdk/go/contextgraph/: budget.go  provider.go  types.go
sdk/go/examples/example-docs/: main.go
sdk/python/: README.md  pyproject.toml
sdk/python/contextgraph_sdk/: __init__.py  budget.py  provider.py  types.py
sdk/python/examples/: example_docs.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/examples/: example-docs.ts
sdk/typescript/src/: budget.ts  index.ts  provider.ts  types.ts
site/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  source.config.ts  tailwind.config.ts
site/content/docs/: changelog.mdx  contributing.mdx  governance.mdx  implementing-a-provider.mdx  index.mdx  meta.json  overview.mdx  protocol-advantages.mdx  protocol-surface.mdx  running-conformance.mdx  security.mdx  stability.mdx
site/src/: mdx-components.tsx
site/src/app/: globals.css  layout.tsx  marketing.css  page.tsx
site/src/app/_components/: ContextReceiptDemo.tsx  contextReceiptProjector.mjs
site/src/app/docs/: layout.tsx
site/src/app/docs/[[...slug]]/: page.tsx
site/src/lib/: source.ts
site/tests/: context-receipt.test.mjs
tests/: docs_site_witness_test.py
