[workspace]
resolver = "3"
members = [
  "contextgraph-types",
  "contextgraph-host",
  "contextgraph-conformance",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/macanderson/context-graph-protocol"
homepage = "https://github.com/macanderson/context-graph-protocol"
# Default: crates opt IN to publishing. The three Context Graph Protocol crates each set
# `publish = true`; any future internal/helper crate stays unpublished by default.
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "fs", "io-util", "sync"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
sha2 = "0.10"
clap = { version = "4", features = ["derive", "env"] }
colored = "3"
libc = "0.2"
