[package]
name = "contextgraph-conformance"
description = "Public Context Graph Protocol conformance suite (host- and provider-side) plus the contextgraph-inspect debugging binary, analogous to MCP's inspector."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/contextgraph-conformance"
readme = "README.md"
keywords = ["contextgraph", "context", "protocol", "conformance", "testing"]
categories = ["development-tools::testing", "command-line-utilities"]
# Overrides the workspace default (publish = false) — this crate is the
# industry-facing conformance suite meant to be published on its own
# (issue #19).
publish = true

# Dev/fixture binaries (contextgraph-inspect debugger, contextgraph-example-docs test fixture) —
# not part of the released product, so exclude them from dist artifacts.
[package.metadata.dist]
dist = false

[dependencies]
# Floor requirements — see the note in contextgraph-host/Cargo.toml: caret reqs break
# the release version stamp at the first minor bump.
contextgraph-types = { path = "../contextgraph-types", version = ">=0.1.0" }
contextgraph-host = { path = "../contextgraph-host", version = ">=0.1.0" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
clap.workspace = true
colored.workspace = true

[[bin]]
name = "contextgraph-inspect"
path = "src/bin/contextgraph-inspect.rs"

# Also the child-process test fixture for both crates' integration tests,
# located via env!("CARGO_BIN_EXE_contextgraph-example-docs").
[[bin]]
name = "contextgraph-example-docs"
path = "src/bin/contextgraph-example-docs.rs"

[dev-dependencies]
serde_json_canonicalizer = "0.3.2"
sha2 = "0.11.0"
